Bumping version to 1.4.0.0-SNAPSHOT
Signed-off-by: Andrew Hulbert <ahulbert@ccri.com>