@@ -14,7 +14,7 @@
 
     <groupId>org.geomesa.nifi</groupId>
     <artifactId>geomesa-nifi</artifactId>
-    <version>1.3.4.0-SNAPSHOT</version>
+    <version>1.4.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -29,10 +29,10 @@
     <properties>
         <scala.version>2.11.7</scala.version>
         <scala.binary.version>2.11</scala.binary.version>
-        <geomesa.version>1.3.4-SNAPSHOT</geomesa.version>
-        <accumulo.version>1.7.3</accumulo.version>
+        <geomesa.version>1.4.0-SNAPSHOT</geomesa.version>
+        <accumulo.version>1.8.1</accumulo.version>
         <nifi.version>1.3.0</nifi.version>
-        <hadoop.version>2.7.3</hadoop.version>
+        <hadoop.version>2.7.4</hadoop.version>
         <kafka.09.version>0.9.0.1</kafka.09.version>
         <kafka.10.version>0.10.2.1</kafka.10.version>
     </properties>
@@ -361,7 +361,6 @@
                         <jvmArg>-Xms1024m</jvmArg>
                         <jvmArg>-Xmx8G</jvmArg>
                         <jvmArg>-Duser.timezone=UTC</jvmArg>
-                        <jvmArg>-XX:MaxPermSize=1024m</jvmArg>
                         <jvmArg>-Djava.awt.headless=true</jvmArg>
                     </jvmArgs>
                     <args>
@@ -369,8 +368,8 @@
                         <arg>-unchecked</arg>
                         <arg>-deprecation</arg>
                     </args>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <scalaVersion>${scala.version}</scalaVersion>
                 </configuration>
             </plugin>
